--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,12 @@ body {
     rgb(0, 128, 128, 1) 100%
   );
 }
+
+/* code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+} */
+
+/* h1 {
+  font-family: "SEGA LOGO FONT";
+} */
